src/objects/Case__c.object
<CustomObject>
    <fields>
        <fullName>Consent_Expiration__c</fullName>
        <label>Consent Expiration</label>
        <summarizedField>InformedConsent__c.ExpirationDate__c</summarizedField>
        <summaryForeignKey>InformedConsent__c.LinkToCase__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Consent_Status__c</fullName>
        <label>Consent Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_LE__c</fullName>
        <label>DA-LE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkToClient__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MDT_Referrer_Agency__c</fullName>
        <label>MDT Referrer Agency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDT_Referrer_Name__c</fullName>
        <label>MDT Referrer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_to_MDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refer to MDT</label>
        <type>Checkbox</type>
    </fields>
    <label>Case</label>
    <nameField>
        <displayFormat>Case - {0000000}</displayFormat>
        <label>Case</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>